# Plugins-Presentation

./: CMakeLists.txt
application/: CMakeLists.txt  MyTestComponent.cpp  MyTestComponent.h  OGLFrameComponent.cpp  OGLFrameComponent.h  VideoFrameComponent.cpp  VideoFrameComponent.h  VideoProcessorHost.cpp  VideoProcessorHost.h  main.cpp
common/: InterfaceIds.h  MyTestInterface.h  VideoFrameInterface.h  VideoProcessorInterface.h  c_api.h  com.h
plugin/: CMakeLists.txt  VideoProcessor.cpp  VideoProcessor.h  dllmain.cpp
